Update Spring Boot Projects, MVC & API